<resources>
    <string name="app_name">FitSync</string>
    <string name="home">Home</string>
    <string name="workout">Workouts</string>
    <string name="tracker">Tracker</string>
    <string name="account">Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="or">Or</string>
    <string name="register">Register</string>
    <string name="greetings_login">Welcome Back! Glad to see you again Companion</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="back_description">Back Button</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="dont_have_acc">Whoops? don’t have an account yet ?</string>
    <string name="register_here">Register Here</string>
    <string name="greeting_register">Hello! Register to join healthy journey!</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login_here">Login Here</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="subtitle_verif">Enter the code verification code we just sent on your email address.</string>
    <string name="get_code">Didn\'t get the code ?</string>
    <string name="resend_code">Resend Code</string>
    <string name="verify">Verify</string>
    <string name="code_otp">Code OTP</string>
    <string name="title_success">You’re Set</string>
    <string name="subtitle_success">Your account has been created \n Please Login to your account :D</string>
    <string name="title_continue">Continue</string>
    <string name="title_failed">Sorry</string>
    <string name="subtitle_failed">Failed to create an Account</string>
    <string name="title_error_code">Error Code :</string>
    <string name="error_code">Error Code</string>
    <string name="send_me_back">Send me back</string>
    <string name="title_bodyprofile">Complete your body profile</string>
    <string name="age">Age</string>
    <string name="weight">Weight</string>
    <string name="kg">Kg</string>
    <string name="height">Height</string>
    <string name="cm">Cm</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="title_exercise">Exercise Frequency per Week</string>
    <string name="beginner">Not Often (Beginner)</string>
    <string name="intermediate">1–3 Days (Intermediate)</string>
    <string name="expert">4 or More days (Expert)</string>

    <string name="value_beginner">Beginner</string>
    <string name="value_intermediate">Intermediate</string>
    <string name="value_expert">Expert</string>


    <string name="reset">Reset</string>
    <string name="done">Done</string>
    <string name="welcome">Welcome</string>
    <string name="subtitle_forgotpassword">Don’t worry! it occurs. Please enter the email address linked with your account.</string>
    <string name="send_code">Send Code</string>
    <string name="title_createnewpassword">Create New Password</string>
    <string name="subtitle_createnewpassword">Create your new password</string>
    <string name="reset_password">Reset Password</string>
    <string name="title_passwordChanged_success">Password Changed!</string>
    <string name="subtitle_changedPass_success">Your password has been changed successfully</string>
    <string name="back_to_login">Back to Login!</string>
    <string name="failed_changed_password">Failed changed password</string>
    <string name="retry">Retry</string>
    <string name="greetings">Greetings</string>
    <string name="age_gender">%1$s - %2$s</string>
    <string name="favorite_workout">Currently Favorited Workouts : \n</string>
    <string name="card_height">Height : %1S Cm</string>
    <string name="card_weight">Weight : %1S Kg</string>
    <string name="card_bmi">BMI : %1S</string>
    <string name="days_streak">Days Streak</string>
    <string name="workout_name">Workout Name</string>
    <string name="level_minutes">%1s / %2S Minutes</string>
    <string name="target_workout">Target Workout</string>
    <string name="recommended_workouts">Recommended Workouts</string>
    <string name="all_workouts">All Workouts</string>
    <string name="hint_searchView">What do you think ?</string>
    <string name="search_workouts">Search Workouts</string>
    <string name="change_account_profile">Change Account Profile</string>
    <string name="logout">Logout</string>
    <string name="preferences">Preferences</string>
    <string name="notifications">Notifications</string>
    <string name="change_theme">Change Theme</string>
    <string name="more_info">More Info</string>
    <string name="about_the_fitsync">About the FitSync</string>
    <string name="rate_us">Rate Us</string>
    <string name="about">About</string>
    <string name="to_about_page">To About page</string>
    <string name="to_change_profile">to Change Profile</string>
    <string name="dark_theme">Dark theme</string>
    <string name="fitsync_logo">FitSync Logo</string>
    <string name="about_description">FitSync adalah sebuah aplikasi yang membantu user menjaga kesehatan dengan men-Tracking pola hidup sehat user dengan memperbolehkan user untuk memantau Weight dan Workouts Journey sesuai dengan preferensi user.</string>
    <string name="meet_fitsync_team">Meet FitSync Team</string>
    <string name="machine_learning">Machine Learning</string>
    <string name="cloud_computing">Cloud Computing</string>
    <string name="mobile_development">Mobile Development</string>
    <string name="description_workout">Description Workout</string>
    <string name="icon_favorite">Icon Favorite</string>
    <string name="time">40:00</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="edit_account">Edit Account</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save">Save</string>
    <string name="subtitle_succes_changeProfile">Horray! your profile has been changed</string>
    <string name="title_logout_dialog">Are you sure?</string>
    <string name="subtitle_logout_dialog">Comeback again Companion!</string>
    <string name="logout_byebye">Byebye!</string>
    <string name="cancel">Cancel</string>
    <string name="your_body_mass_index">Your Body Mass Index</string>
    <string name="bmi">BMI</string>
    <string name="weight_chart">Weight Chart</string>
    <string name="add_body_weight">Add Body Weight</string>
    <string name="birthday">Birthday :</string>
    <string name="body_bmi">Ideal Weight (22)</string>

    //Error
    <string name="layout_name_error">Nama tidak boleh kosong</string>
    <string name="layout_email_error1">Email tidak boleh kosong</string>
    <string name="layout_email_error2">Email harus mengandung @ </string>
    <string name="layout_password_error">Password tidak boleh kurang dari 8 Karakter</string>
    <string name="layout_conPass_error">Password tidak sama</string>
    <string name="btnFailedDialogText">Fill again!</string>
    <string name="successResendCode">Success Resend Code</string>
    <string name="failedResendCode">Success Resend Code</string>

    <string name="dateFormat">yyyy-MM-dd</string>
    <string name="goal_weight">Goal Weight</string>
    <string name="fill_again">Fill Again</string>

    //Adapter item
    <string name="exercise_level_duration">%s - %s</string>
    <string name="greetings_good_morning">Good Morning!</string>
    <string name="greetings_good_afternoon">Good Afternoon!</string>
    <string name="greetins_good_evening">Good Evening!</string>
    <string name="greetings_good_night">Good Night!</string>
    <string name="card_goalWeight">Goal Weight : %1S Kg</string>

    <string name="give_us_rate">Give us Rate!</string>
    <string name="okay">Okay</string>

    //Nutrition
    <string name="nutrition_gram">%1$d g</string>
    <string name="nutrition_calorie">%1$d K</string>


    //BMI
    <string name="height_format">%1$s CM</string>
    <string name="weight_format">%1$s KG</string>
    <string name="bmi_description">%1$s (%2$s)</string>
    <string name="filter">Filter</string>
    <string name="level">Level</string>
    <string name="minutes">Minutes</string>
    <string name="_15_minutes">15 Minutes</string>
    <string name="_30_minutes">30 Minutes</string>
    <string name="_45_minutes">45 Minutes</string>
    <string name="_60_minutes">60 Minutes</string>
    <string name="key_notification">key_notification</string>
    <string name="notify_channel_name">Workout Reminder</string>
    <string name="notify_content">DingDong, it\'s time to Workouts</string>
    <string name="notif_id">notif-id</string>
    <string name="pref_key_notify">notif_key</string>
    <string name="refresh">Refresh</string>
    <string name="nutrition_corner">Nutrition Corner</string>
    <string name="quote_dayuntil10">Keep it Up Companion</string>
    <string name="quote_dayuntil21">It\'s hot here! push yourself</string>
    <string name="quote_dayuntilend">WOAHHHH BRIGHT IT ON Companion</string>
    <string name="nutrition_needs">Nutrition Needs</string>
    <string name="fat">Fat</string>
    <string name="protein">Protein</string>
    <string name="carbo">Carbo</string>
    <string name="calorie">Calorie</string>
    <string name="nameML1">Steven Tribethran\n M694BSY0582</string>
    <string name="nameML2">Darrel Cyril Gunawan\n M108BSY1617</string>
    <string name="nameML3">Nigel Kusdenata\n M108BSY1102</string>
    <string name="nameCC1">Muhammad Alfayed Dennita\n C134BSY3479</string>
    <string name="nameCC2">Alida Shidqiya Naifa Ulmuflikhun\n C248BSX4205</string>
    <string name="nameMD1">Vincent\n A694BSY2946</string>
    <string name="nameMD2">Hidayat\n A550BKY4421</string>
    <string name="last_workout">Last Workout</string>
    <string name="show_more">Show more</string>
    <string name="recent_workouts">Recent Workouts</string>
    <string name="date_done">Date done</string>

</resources>