<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.forgotpassword.OtpPasswordActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <Button
            android:id="@+id/ib_back"
            style="@style/Widget.App.Button.IconButton.Filled"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:background="@drawable/ic_arrow_back"
            android:contentDescription="@string/back_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/titlePassVerif"
            style="@style/TextAppearance.FitSync.HeadlineLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/otp_verification"
            android:textColor="?attr/colorOnBackground"
            app:layout_constraintTop_toBottomOf="@id/ib_back" />

        <TextView
            android:id="@+id/subtitlePassVerif"
            style="@style/TextAppearance.FitSync.LabelMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/subtitle_verif"
            android:textColor="?attr/colorOnBackground"
            app:layout_constraintTop_toBottomOf="@id/titlePassVerif" />

        <com.mukeshsolanki.OtpView
            android:id="@+id/otp_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:hint="@string/code_otp"
            android:inputType="number"
            android:itemBackground="@drawable/bg_otp_item"
            android:textColor="@color/md_theme_light_onSurface"
            app:OtpItemSpacing="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/subtitlePassVerif" />

        <TextView
            android:id="@+id/resendCodePass"
            style="@style/TextAppearance.FitSync.LabelMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/get_code"
            android:textColor="?attr/colorOnBackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/otp_view" />

        <Button
            android:id="@+id/btn_resendCodePass"
            style="@style/Widget.App.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-10dp"
            android:enabled="false"
            android:text="@string/resend_code"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/resendCodePass" />

        <Button
            android:id="@+id/btn_verifyAcc"
            style="@style/Widget.App.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/verify"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_resendCodePass" />

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/progress_bar"
            style="@style/Widget.App.CircularProgressIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>